--- a/roles/devsetup/tasks/main.yml
+++ b/roles/devsetup/tasks/main.yml
@@ -35,6 +35,8 @@
   ansible.builtin.include_tasks:
     file: download.yml
   loop:
+    - executable: argocd
+      bin: "https://github.com/argoproj/argo-cd/releases/download/{{ argocd_version }}/argocd-linux-{{ deb_architecture[ansible_architecture] }}"
     - executable: kubectl
       sha256: "https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/{{ deb_architecture[ansible_architecture] }}/kubectl.sha256"
       bin: https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/{{ deb_architecture[ansible_architecture] }}/kubectl
@@ -46,6 +48,8 @@
   vars:
     deb_architecture:
       x86_64: amd64
+    # renovate: datasource=github-releases depName=argoproj/argo-cd
+    argocd_version: v2.9.1
     # renovate: datasource=github-releases depName=kubernetes/kubernetes
     kubectl_version: v1.28.3
     # renovate: datasource=github-releases depName=starship/starship
