--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -30,13 +30,14 @@ resources:
   - ../../../base/argo-proj
   - application/ara.yml
   - application/aventertainment.yml
-  - application/dns.yml
   - application/calico.yml
+  - application/dns.yml
   - application/external-services.yml
   - application/generic-device-plugin.yml
+  - application/homeassistant.yml
   - application/kubevirt.yml
   - application/mariadb.yml
-  - application/homeassistant.yml
   - application/prometheus.yml
+  - application/redis.yml
   - application/traefik.yml
   - application/unifi.yml
