include crds when inflating the helm chart

--- a/kustomization/components/redis-operator/kustomization.yml
+++ b/kustomization/components/redis-operator/kustomization.yml
@@ -7,4 +7,5 @@ helmCharts:
     version: 0.15.9
     repo: https://ot-container-kit.github.io/helm-charts/
     releaseName: redis-operator
+    includeCRDs: true
     valuesFile: values.yml
