--- a/kustomization/components/authelia/deployment.yml
+++ b/kustomization/components/authelia/deployment.yml
@@ -7,6 +7,8 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: authelia
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
