--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -37,6 +37,7 @@ resources:
   - application/homeassistant.yml
   - application/kubevirt.yml
   - application/mariadb.yml
+  - application/postgresql.yml
   - application/prometheus.yml
   - application/redis.yml
   - application/traefik.yml
