--- a/kustomization/components/postgresql-operator/kustomization.yml
+++ b/kustomization/components/postgresql-operator/kustomization.yml
@@ -2,6 +2,17 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
+patches:
+  - path: patches/use_crd_configuration.yml
+    target:
+      kind: Deployment
+      name: postgres-operator
 resources:
   # renovate: datasource=github-releases
-  - github.com/zalando/postgres-operator/manifests?rev=v1.10.1
+  - https://github.com/zalando/postgres-operator/raw/v1.10.1/manifests/operatorconfiguration.crd.yaml
+  # renovate: datasource=github-releases
+  - https://github.com/zalando/postgres-operator/raw/v1.10.1/manifests/postgresql-operator-default-configuration.yaml
+  # renovate: datasource=github-releases
+  - https://github.com/zalando/postgres-operator/raw/v1.10.1/manifests/operator-service-account-rbac.yaml
+  # renovate: datasource=github-releases
+  - https://github.com/zalando/postgres-operator/raw/v1.10.1/manifests/postgres-operator.yaml
