--- a/kustomization/components/postgresql-operator/kustomization.yml
+++ b/kustomization/components/postgresql-operator/kustomization.yml
@@ -3,6 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 patches:
+  - path: patches/set_better_default_configuration.yml
+    target:
+      kind: OperatorConfiguration
+      name: postgresql-operator-default-configuration
   - path: patches/use_crd_configuration.yml
     target:
       kind: Deployment
