scale out authelia to have two replicas

--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -45,6 +45,10 @@ patches:
     target:
       kind: Middleware
       name: forwardauth-authelia-middleware
+  - path: patches/set_authelia_replicas.yml
+    target:
+      kind: Deployment
+      name: authelia-deployment
   - path: patches/set_ingress_published_service.yml
     target:
       kind: Deployment
