consolidate vector into one namespace

--- a/kustomization/components/traefik/configmap/vector.yml
+++ b/kustomization/components/traefik/configmap/vector.yml
@@ -15,7 +15,7 @@ transforms:
     type: remap
 sinks:
   aggregator:
-    address: aggregator.vector-aggregator.svc.cluster.local:6000
+    address: aggregator.vector.svc.cluster.local:6000
     inputs:
       - internal_metrics
       - parsed_access_log
