--- a/kustomization/overlays/prod/prometheus/servicemonitor.yml
+++ b/kustomization/overlays/prod/prometheus/servicemonitor.yml
@@ -14,7 +14,7 @@ spec:
       port: prom-exporter
   namespaceSelector:
     matchNames:
-      - vector-aggregator
+      - vector
   selector:
     matchLabels:
       app.kubernetes.io/component: Aggregator
