--- a/kustomization/overlays/prod/vector/agent-values.yml
+++ b/kustomization/overlays/prod/vector/agent-values.yml
@@ -18,7 +18,7 @@ customConfig:
       type: remap
   sinks:
     aggregator:
-      address: aggregator.vector-aggregator.svc.cluster.local:6000
+      address: aggregator.vector.svc.cluster.local:6000
       inputs:
         - internal_metrics
         - kubernetes_logs
