--- a/kustomization/overlays/prod/argo-proj/application/vector.yml
+++ b/kustomization/overlays/prod/argo-proj/application/vector.yml
@@ -2,16 +2,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: vector-aggregator
+  name: vector
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://github.com/sdwilsh/ansible-playbooks
-    path: kustomization/base/vector-aggregator
-    targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: vector-aggregator
+    namespace: vector
+  source:
+    path: kustomization/overlays/prod/vector
+    repoURL: https://github.com/sdwilsh/ansible-playbooks
+    targetRevision: HEAD
   syncPolicy:
     automated: {}
