--- a/kustomization/overlays/prod/vector/kustomization.yml
+++ b/kustomization/overlays/prod/vector/kustomization.yml
@@ -6,11 +6,16 @@ helmCharts:
   - name: vector
     version: 0.29.0
     repo: https://helm.vector.dev
+    releaseName: vector-agent
+    valuesFile: agent-values.yml
+  - name: vector
+    version: 0.29.0
+    repo: https://helm.vector.dev
     releaseName: vector-aggregator
-    valuesFile: values.yml
+    valuesFile: aggregator-values.yml
 images:
   - name: timberio/vector
     newTag: 0.34.1-distroless-libc
-namespace: vector-aggregator
+namespace: vector
 resources:
   - namespace.yml
