--- a/kustomization/overlays/prod/kube-vip/kustomization.yml
+++ b/kustomization/overlays/prod/kube-vip/kustomization.yml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/kube-vip
 namespace: kube-vip
 patches:
   - path: patches/set_vip_address.yml
     target:
       kind: DaemonSet
       name: kube-vip-ds
-resources:
-  - ../../../base/kube-vip
