--- a/kustomization/components/purelb/kustomization.yml
+++ b/kustomization/components/purelb/kustomization.yml
@@ -1,6 +1,6 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
 
 images:
   - name: registry.gitlab.com/purelb/purelb/lbnodeagent
@@ -10,7 +10,5 @@ images:
   # Versions past 0.7.0 switch to a single image
   # - name: registry.gitlab.com/purelb/purelb/purelb
   #   newTag: v0.7.0
-namespace: purelb
 resources:
   - https://gitlab.com/api/v4/projects/purelb%2Fpurelb/packages/generic/manifest/0.0.1/purelb-complete.yaml
-  - servicegroup.yml
