--- a/kustomization/overlays/prod/argo-proj/application/purelb.yml
+++ b/kustomization/overlays/prod/argo-proj/application/purelb.yml
@@ -7,6 +7,7 @@ metadata:
 spec:
   project: default
   source:
+    path: kustomization/overlays/prod/purelb
     repoURL: https://github.com/sdwilsh/ansible-playbooks
     targetRevision: HEAD
   destination:
