--- a/kustomization/overlays/prod/purelb/kustomization.yml
+++ b/kustomization/overlays/prod/purelb/kustomization.yml
@@ -2,19 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/purelb
 namespace: purelb
-patches:
-  - path: patches/set_default_pool.yml
-    target:
-      name: default
-      kind: ServiceGroup
-  - path: patches/set_home_pool.yml
-    target:
-      name: home-servicegroup
-      kind: ServiceGroup
-  - path: patches/set_open_pool.yml
-    target:
-      name: open-servicegroup
-      kind: ServiceGroup
 resources:
-  - ../../../base/purelb
+  - servicegroup.yml
