--- a/kustomization/overlays/prod/purelb/servicegroup.yml
+++ b/kustomization/overlays/prod/purelb/servicegroup.yml
@@ -8,6 +8,8 @@ spec:
   local:
     v4pool:
       aggregation: default
+      # All addresses of 10.11.1.0/27
+      pool: 10.11.1.0-10.11.1.31
       subnet: 10.11.0.0/23
 ---
 apiVersion: purelb.io/v1
@@ -18,6 +20,8 @@ spec:
   local:
     v4pool:
       aggregation: default
+      # All addresses of 10.11.1.32/27
+      pool: 10.11.1.32-10.11.1.63
       subnet: 10.11.0.0/23
 ---
 # This is not firewalled off for anything on the home network.
@@ -29,4 +33,6 @@ spec:
   local:
     v4pool:
       aggregation: default
+      # All addresses of 10.11.1.64/27
+      pool: 10.11.1.64-10.11.1.95
       subnet: 10.11.0.0/23
