--- a/kustomization/components/unifi-network-application/statefulset.yml
+++ b/kustomization/components/unifi-network-application/statefulset.yml
@@ -162,6 +162,7 @@ spec:
         resources:
           requests:
             storage: 1Gi
+        storageClassName: longhorn-encrypted
     - metadata:
         name: unifi-config
       spec:
@@ -170,3 +171,4 @@ spec:
         resources:
           requests:
             storage: 1Gi
+        storageClassName: longhorn-encrypted
