--- a/kustomization/overlays/prod/longhorn/kustomization.yml
+++ b/kustomization/overlays/prod/longhorn/kustomization.yml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/longhorn
 patches:
   - path: patches/change_ingress_host.yml
     target:
@@ -11,5 +13,3 @@ patches:
     target:
       kind: Ingress
       name: longhorn-frontend-ingress
-resources:
-  - ../../../base/longhorn
