--- a/kustomization/overlays/prod/traefik/redisreplication.yml
+++ b/kustomization/overlays/prod/traefik/redisreplication.yml
@@ -40,4 +40,4 @@ spec:
         resources:
           requests:
             storage: 1Gi
-        storageClassName: longhorn-crypto-global
+        storageClassName: longhorn-encrypted
