--- a/kustomization/components/argo-cd/kustomization.yml
+++ b/kustomization/components/argo-cd/kustomization.yml
@@ -1,8 +1,7 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
 
-namespace: argocd
 patches:
   - target:
       kind: ConfigMap
@@ -11,7 +10,6 @@ patches:
   - path: patches/set_kustomize_buildOptions.yml
   - path: patches/set_tracking_by_annotation.yml
 resources:
-  - namespace.yml
   # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.9.2/manifests/install.yaml
   - ingress.yml
