--- a/kustomization/overlays/prod/argo-cd/kustomization.yml
+++ b/kustomization/overlays/prod/argo-cd/kustomization.yml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/argo-cd
 namespace: argocd
 patches:
   - path: patches/change_ingress_host.yml
@@ -13,4 +15,4 @@ patches:
       kind: Ingress
       name: argo-cd-ingress
 resources:
-  - ../../../base/argo-cd
+  - namespace.yml
