add ip for sdwilsh-dev on kairos subnet

--- a/host_vars/sdwilsh-dev.hogs.tswn.us.yml
+++ b/host_vars/sdwilsh-dev.hogs.tswn.us.yml
@@ -8,6 +8,14 @@ common__additional_ethernet_interfaces:
         - "network   10.117.0.0"
         - "netmask   255.255.254.0"
         - "broadcast 10.117.1.255"
+  - name: eth2
+    inet:
+      mode: static
+      lines:
+        - address   10.11.0.25
+        - network   10.11.0.0
+        - netmask   255.255.254.0
+        - broadcast 10.11.1.255
 common__gateway_v4_address: "10.10.0.1"
 common__ip_addresses:
   - "10.10.0.20/24"
