--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -180,6 +180,8 @@ bind_zones:
         ip: 10.11.0.101
       - name: worker01.hogs
         ip: 10.11.0.104
+      - name: worker02.hogs
+        ip: 10.11.0.104
       # At some point, this should ask the k3s control plane what the IP address is
       - name: traefik.hogs
         ip: 10.11.1.64
