use local external traffic policy with traefik so we can use authelia properly

--- a/kustomization/components/traefik/service.yml
+++ b/kustomization/components/traefik/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: traefik-svc
 spec:
-  externalTrafficPolicy: Cluster
+  externalTrafficPolicy: Local
   ports:
     - name: web
       protocol: TCP
