--- a/kustomization/components/ara/deployment.yml
+++ b/kustomization/components/ara/deployment.yml
@@ -17,20 +17,23 @@ spec:
         - name: ara
           env:
             - name: ARA_DATABASE_ENGINE
-              value: django.db.backends.mysql
+              value: django.db.backends.postgresql
             - name: ARA_DATABASE_HOST
-              value: ara-galera-db-primary
+              value: ara-database-pg 
             - name: ARA_DATABASE_NAME
               value: ara
             - name: ARA_DATABASE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: ara-credentials
-                  key: mariadb-password
+                  name: ara-owner-user.ara-database-pg.credentials.postgresql.acid.zalan.do
+                  key: password
             - name: ARA_DATABASE_USER
-              value: ara
+              valueFrom:
+                secretKeyRef:
+                  name: ara-owner-user.ara-database-pg.credentials.postgresql.acid.zalan.do
+                  key: username
             - name: ARA_DATABASE_PORT
-              value: "3306"
+              value: "5432"
             - name: ARA_SECRET_KEY
               valueFrom:
                 secretKeyRef:
