--- a/kustomization/components/ara/kustomization.yml
+++ b/kustomization/components/ara/kustomization.yml
@@ -2,12 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
-images:
-  - name: mariadb
-    newTag: 11.1.3
 resources:
   - cronjob.yml
   - deployment.yml
   - ingress.yml
-  - mariadb.yml
+  - postgresql.yml
   - service.yml
