--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -26,6 +26,8 @@ access_control:
     - domain: ara.hogs.tswn.us
       networks:
         - man
+        - 10.117.0.23 # loki.hogs.tswn.us
+        - 10.117.0.24 # monitor.house.gem.hogs.tswn.us
       policy: bypass
     - domain: opensprinkler.hogs.tswn.us
       networks:
