--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -88,8 +88,6 @@ bind_zones:
         ip: "10.117.0.46"
       - name: "maccabeus01.hogs"
         ip: "10.117.0.48"
-      - name: "maccabeus02.hogs"
-        ip: "10.117.0.49"
       - name: "0.ntp.hogs"
         ip: "10.117.0.50"
 
@@ -149,6 +147,12 @@ bind_zones:
         ip: "10.10.0.56"
       - name: "centurylink.routers.hogs"
         ip: "10.10.0.70"
+      - name: hogs.routers.hogs
+        ip: 10.10.0.78
+      - name: hogs01.routers.hogs
+        ip: 10.10.0.79
+      - name: hogs02.routers.hogs
+        ip: 10.10.0.80
       - name: "guest01.routers.hogs"
         ip: "10.10.0.82"
       - name: "guest02.routers.hogs"
