--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -165,6 +165,13 @@ vyos_firewall_global__group:
       afi: "ipv4"
       members:
         - address: "10.117.0.23"
+    - name: ESPHOME-v4
+      description: ESPHOME Device Addresses
+      afi: ipv4
+      members:
+        - address: 10.117.0.35 # living-dash.hogs.tsnw.us
+        - address: 10.117.0.36 # office-bluetooth-proxy.hogs.tswn.us
+        - address: 10.117.0.37 # living-bluetooth-proxy.hogs.tswn.us
     - name: FILE-SERVER-v4
       description: "IP Addresses for the NFS Server ({{ ansible_managed }})"
       afi: ipv4
@@ -287,6 +294,11 @@ vyos_firewall_global__group:
       description: "{{ ansible_managed }}"
       members:
         - port: "53"
+    - name: ESPHOME
+      description: Ports needed to access ESPHOME devices.
+      members:
+        - port: 3232 # ESP32 OTA Update Port
+        - port: 6053 # Native API Component Port
     - name: NFS
       members:
         - port: "111"
