--- a/kustomization/overlays/prod/homeassistant/kustomization.yml
+++ b/kustomization/overlays/prod/homeassistant/kustomization.yml
@@ -4,6 +4,7 @@ kind: Kustomization
 
 components:
   - ../../../components/esphome
+  - ../../../components/homeassistant
   - ../../../components/mosquitto
 configMapGenerator:
   - files:
