--- a/kustomization/components/homeassistant/kustomization.yml
+++ b/kustomization/components/homeassistant/kustomization.yml
@@ -8,6 +8,8 @@ configMapGenerator:
       - configmap/homeassistant.code-workspace
   - name: scripts-configmap
     files:
+      - configmap/scripts/generate_config.sh
+      - configmap/scripts/generate_http_config.sh
       - configmap/scripts/generate_recorder_config.sh
 images:
   - name: ghcr.io/home-assistant/home-assistant
