--- a/group_vars/vyos_hogs.yml
+++ b/group_vars/vyos_hogs.yml
@@ -76,6 +76,12 @@ vyos_dhcp_server__networks:
       - name: hue
         ip: 10.117.0.34
         mac: ec:b5:fa:9b:c1:f6
+      - name: fan-mainbed
+        ip: 10.117.0.42
+        mac: 20:f8:5e:23:92:87
+      - name: fan-office
+        ip: 10.117.0.43
+        mac: 20:f8:5e:53:30:8d
     subnet: 10.117.0.0/23
 
 vyos_firewall__zones:
