--- a/kustomization/components/homeassistant/kustomization.yml
+++ b/kustomization/components/homeassistant/kustomization.yml
@@ -11,6 +11,7 @@ configMapGenerator:
       - configmap/scripts/generate_config.sh
       - configmap/scripts/generate_http_config.sh
       - configmap/scripts/generate_recorder_config.sh
+      - configmap/scripts/manage_hacs.sh
 images:
   - name: ghcr.io/home-assistant/home-assistant
     newTag: 2023.11.3
