add load balancer ip for traefik

--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -57,6 +57,10 @@ patches:
     target:
       kind: Ingress
       name: traefik-dashboard-ingress
+  - path: patches/set_traefik_service_ip.yml
+    target:
+      kind: Service
+      name: traefik-svc
   - path: patches/update_subjects.yml
     target:
       kind: ClusterRoleBinding
