do not bind on ipv6

--- a/kustomization/components/hogs-bind9-config/configmap/etc_named.conf
+++ b/kustomization/components/hogs-bind9-config/configmap/etc_named.conf
@@ -15,7 +15,7 @@ acl "ns2" {
 
 options {
   listen-on port 53 { any; };
-  listen-on-v6 port 53 { any; };
+  listen-on-v6 port 53 { ::1; };
   directory   "/var/cache/bind";
   dump-file   "/var/cache/bind/data/cache_dump.db";
   statistics-file "/var/cache/bind/data/named_stats.txt";
